style: mobile version

--- a/templates/Reservation/reservation.html.twig
+++ b/templates/Reservation/reservation.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
     <main class="pt-28 flex justify-evenly text-secondary">
-        <div class="w-full md:w-[45%] reservation_container my-8 mx-4 md:mx-8">
-            <div class="w-fit mx-auto relative top-1/2 -translate-y-1/2 ">
-                <h1 class="font-primary text-3xl mb-11">Faites votre réservation</h1>
-                <form method="POST"  class="max-w-[589px] w-5/6 font-secondary border border-solid border-500 overflow-hidden">
+        <div class="w-full lg:w-[45%] reservation_container my-8 mx-4 md:mx-8">
+            <div class="w-full mx-auto relative top-1/2 -translate-y-1/2 ">
+                <h1 class="font-primary text-3xl mb-11 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6">Faites votre réservation</h1>
+                <form method="POST"  class="max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 overflow-hidden">
                     <div class="grid duration-500" id="grid_reservation">
                         <div class="active flex flex-col gap-2 p-3" data-index=0>
                             <div>
