--- a/templates/Reservation/reservation.html.twig
+++ b/templates/Reservation/reservation.html.twig
@@ -7,6 +7,12 @@
         <div class="w-full lg:w-[45%] reservation_container my-8 mx-4 md:mx-8">
             <div class="w-full mx-auto relative top-1/2 -translate-y-1/2 ">
                 <h1 class="font-primary text-3xl mb-11 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6">Faites votre réservation</h1>
+                {% if error %}
+                    <div class="error_container text-sm">{{ error }}</div>
+                {% endif %}
+                {% if success %}
+                    <div class="success_container text-sm">{{ success }}</div>
+                {% endif %}
                 <form method="POST" onSubmit="sendReservation(event)" class="max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 overflow-hidden">
                     <div class="grid duration-500" id="grid_reservation">
                         <div class="active flex flex-col gap-2 p-3" data-index=0>
