--- a/templates/Client/profil_down/reservations.html.twig
+++ b/templates/Client/profil_down/reservations.html.twig
@@ -1,7 +1,10 @@
 <div class="text-primary bg-400">
     <div class="box-shadow-lg">
-        <section>
-            
+        <section class="py-6 relative flex after mx-auto">
+            <form class="mx-auto text-sm sm-600:text-base flex items-center justify-center">
+                <input type="date" name="search_date" class="bg-secondary text-primary input_withoutIcon">
+                <button type="submit" class="px-2 bg-600 text-secondary hover:bg-primary duration-150 h-8 flex justify-center items-center gap-2 min-w-[2rem] sm-600:min-w-fit"><p class="hidden sm-600:block">Rechercher</p><i class="fa-solid fa-magnifying-glass icon_profil"></i></button>
+            </form>
         </section>
         <section class="py-6 flex flex-col gap-6">
         {% for key,reservation in reservations %}
