--- a/templates/Client/profil_down/reservations.html.twig
+++ b/templates/Client/profil_down/reservations.html.twig
@@ -2,7 +2,7 @@
     <div class="box-shadow-lg">
         <section class="py-6 relative flex after mx-auto">
             <form class="mx-auto text-sm sm-600:text-base flex items-center justify-center">
-                <input type="date" name="search_date" class="bg-secondary text-primary input_withoutIcon">
+                <input type="date" name="search_reservation" class="bg-secondary text-primary input_withoutIcon">
                 <button type="submit" class="px-2 bg-600 text-secondary hover:bg-primary duration-150 h-8 flex justify-center items-center gap-2 min-w-[2rem] sm-600:min-w-fit"><p class="hidden sm-600:block">Rechercher</p><i class="fa-solid fa-magnifying-glass icon_profil"></i></button>
             </form>
         </section>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div>
-                        <button aria-label="Supprimer" id="{{ 'delete_'~ key }}" onclick="deleteReservation(event)" class="bg-red-600 hover:bg-secondary hover:text-red-600 duration-150">
+                        <button aria-label="Supprimer" data-id="{{ reservation.id }}" onclick="deleteReservation(event)" class="bg-red-600 hover:bg-secondary hover:text-red-600 duration-150">
                             <i class="fa-solid fa-trash button_profil button-full"></i>
                         </button>
                     </div>
