--- a/templates/Reservation/reservation.html.twig
+++ b/templates/Reservation/reservation.html.twig
@@ -4,202 +4,8 @@
 
 {% block body %}
     <main class="pt-28 flex justify-evenly text-secondary">
-        <div class="w-full lg:w-[45%] reservation_container my-8 mx-4 md:mx-8 ">
-            <div class="w-full mx-auto relative top-1/2 -translate-y-1/2 pb-16">
-                <h1 class="font-primary text-3xl mb-11 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6">Faites votre réservation</h1>
-                {% if error %}
-                    <div class="error_container text-sm">{{ error }}</div>
-                {% endif %}
-                {% if success %}
-                    <div class="success_container text-sm">{{ success }}</div>
-                {% endif %}
-                <form method="POST" onSubmit="sendReservation(event)" class="max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-500 overflow-hidden">
-                    <div class="grid duration-500" id="grid_reservation">
-                        <div class="active flex flex-col gap-2 p-3" data-index=0>
-                        {% if app.user and user_templates|length > 0 %}
-                        <div>
-                            <label for="template" class="text-lg">Fiches de pré-révervation : </label>
-                            <div class="h-8 flex items-center bg-500 relative">
-                                <i class="fa-solid fa-file-lines form_icon"></i>
-                                <div class="absolute right-8">
-                                    <div class="" id="spinner_template"><div></div><div></div><div></div><div></div></div>
-                                </div>
-                                <select onChange="handleTemplate(event)" name="template" id="template" class="flex-1 h-full bg-transparent">
-                                    <option class="bg-500" value="">-- Pré-remplir les informations --</option>
-                                    {% for template in user_templates %}
-                                    <option class="bg-500" value="{{ template.id }}">{{ template.title }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <small class="form_error" id="error_template"></small>
-                        </div>
-                        {% endif %}
-                            <div>
-                                <label class="text-lg" for="name">Nom :<label>
-                                <div class="h-8 flex items-center bg-500">
-                                    <i class="fa-solid fa-user form_icon"></i>
-                                    <input type="text" id="name" name="name" minLength=2 maxLength=100 required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="Nom de la réservation...">
-                                </div>
-                                <small class="form_error" id="error_name">
-                                </small>
-                            </div>
-                            <div>
-                                <label class="text-lg" for="places">Couverts :<label></legend>
-                                <div class="w-20 flex items-center bg-500">
-                                    <i class="fa-solid fa-utensils form_icon"></i>
-                                    <input type="text" id="places" name="places" min=2 max=100 required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="1">
-                                </div>
-                                <small class="form_error" id="error_places">
-                                </small>
-                            </div>
-                            <div>
-                                <label for="allergies" class="text-lg">Allergie(s) :</label>
-                                <div class=" bg-500 flex items-center gap-2 pt-2">
-                                    <i class="fa-solid fa-triangle-exclamation form_icon"></i>
-                                    <div id="allergies" class="py-2 bg-transparent grid gap-x-2 items-center form_allergies flex-1">
-                                        <input type="checkbox" name="allergies_0" value="gluten" data-text="Gluten">
-                                        <label for="allergies_0">Gluten</label>
-                                        <input type="checkbox" name="allergies_1" value="fish" data-text="Poisson">
-                                        <label for="allergies_1">Poisson</label>
-                                        <input type="checkbox" name="allergies_2" value="shellfish" data-text="Poisson">
-                                        <label for="allergies_2">Crustacés</label>
-                                        <input type="checkbox" name="allergies_3" value="eggs" data-text="Œufs">
-                                        <label for="allergies_3">Œufs</label>
-                                        <input type="checkbox" name="allergies_4" value="peanuts" data-text="Arachides">
-                                        <label for="allergies_4">Arachides</label>
-                                        <input type="checkbox" name="allergies_5" value="mustard" data-text="Moutarde">
-                                        <label for="allergies_5">Moutarde</label>
-                                        <input type="checkbox" name="allergies_6" value="molluscs" data-text="Mollusques">
-                                        <label for="allergies_6">Mollusques</label>
-                                        <input type="checkbox" name="allergies_7" value="soy" data-text="Soja">
-                                        <label for="allergies_7">Soja</label>
-                                        <input type="checkbox" name="allergies_8" value="sulphites" data-text="Sulfites">
-                                        <label for="allergies_8">Sulfites</label>
-                                        <input type="checkbox" name="allergies_9" value="sesame" data-text="Sésame">
-                                        <label for="allergies_9">Sésame</label>
-                                        <input type="checkbox"  name="allergies_10" value="celery" data-text="Céleri">
-                                        <label for="allergies_10">Céleri</label>
-                                        <input type="checkbox"  name="allergies_11" value="lupines" data-text="Lupins">
-                                        <label for="allergies_11">Lupins</label>
-                                        <input type="checkbox"  name="allergies_12" value="milk" data-text="Lait">
-                                        <label for="allergies_12">Lait</label>
-                                        <input type="checkbox"  name="allergies_13" value="nuts" data-text="Fruits à coque">
-                                        <label for="allergies_13">Fruits à coque</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <button aria-label="Suivant" onclick="nextSlide(event)" data-card=0 class="mt-8 rounded-full bg-secondary text-primary hover:text-secondary hover:bg-500 duration-150 h-10 w-10 mx-auto"><i class="fa-solid fa-arrow-right form_icon text-xl"></i></button>
-                        </div>
-                        <div class="flex flex-col gap-2 p-3" data-index=1>
-                            <div class="">
-                                <label class="text-lg block" for="date">Date :</label>
-                                <input type="date" name="date" id='date' class="bg-500 h-8 px-2" placeholder="dd-mm-YYYY" max={{ "now"|date_modify("+1 year")|date("m/d/Y", "Europe/Paris") }} >
-                                <small class="form_error block" id="error_date">
-                                </small>
-                                <small class="block">Il peut arriver que certains jours nous soyons fermés exceptionnellement.</small>
-                            </div>
-                            <div class="slow-opacity-reverse" id="reservation_service">
-                                <label for="service" class="text-lg">Service :</label>
-                                <small class="form_error text-base pr-2 block" id="error_service">
-                                </small>
-                                <div class="flex gap-8">
-                                    <div class="invisible opacity-0 h-8 bg-500 w-24 flex items-center justify-center gap-2" id="service_evening">
-                                        <input disabled type="radio" name="service" id="evening" value="evening" checked>
-                                        <label for="evening">Midi</label>
-                                    </div>
-                                    <div class="invisible opacity-0 h-8 bg-500 w-24 flex items-center justify-center gap-2" id="service_noon">
-                                        <input disabled type="radio" name="service" id="noon" value="noon">
-                                        <label for="noon">Soir</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slow-opacity-reverse" id="reservation_schedules">
-                                <label for="schedule" class="text-lg block" >Horaires :</label>
-                                <select disabled required name="schedules" id="schedules" class="h-8 px-4 bg-500">
-                                    <option value="">--Selectionner une heure--</option>
-                                </select>
-                                <small class="form_error" id="error_schedule">
-                                </small>
-                            </div>
-                            <div class="flex gap-8 mx-auto flex-1 items-end buttons">
-                                <button aria-label="Précédent" disabled onclick="previousSlide(event)" data-card=1 class="rounded-full bg-secondary text-primary hover:text-secondary hover:bg-500 duration-150 h-10 w-10"><i class="fa-solid fa-arrow-left form_icon text-xl"></i></button>
-                                <button aria-label="Suivant" disabled onclick="nextSlide(event)" data-card=1 class="rounded-full bg-secondary text-primary hover:text-secondary hover:bg-500 duration-150 h-10 w-10"><i class="fa-solid fa-arrow-right form_icon text-xl"></i></button>
-                            </div>
-                        </div>
-                        <div class="p-3 flex flex-col" data-index=2 id="summary">
-                            <h2 class="font-primary text-xl text-center underline underline-offset-4 mb-8">Récapitulatif</h2>
-                            <div class="flex-1 flex flex-col gap-2">
-                                <div class="summary_container">
-                                    <p>Nom :</p>
-                                    <div class="h-8 flex items-center bg-500">
-                                        <i class="fa-solid fa-user form_icon"></i>
-                                        <p id="summary_name">Test</p>
-                                    </div>
-                                </div>
-                                <div class="summary_container">
-                                    <p>Couverts :</p>
-                                    <div class="h-8 flex items-center bg-500">
-                                        <i class="fa-solid fa-utensils form_icon"></i>
-                                        <p id="summary_places"></p>
-                                    </div>
-                                </div>
-                                <div class="summary_container">
-                                    <p>Allergies :</p>
-                                    <div class="flex items-center bg-500 h-fit">
-                                        <i class="fa-solid fa-triangle-exclamation form_icon"></i>
-                                        <ul id="summary_allergies" class="flex flex-wrap gap-x-2 list-disc list-inside flex-1">
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="summary_container">
-                                    <p>Date :</p>
-                                    <div class="h-8 flex items-center bg-500">
-                                        <i class="fa-solid fa-calendar form_icon"></i>
-                                        <p id="summary_date"></p>
-                                    </div>
-                                </div>
-                                <div class="summary_container">
-                                    <p>Service :</p>
-                                    <div class="h-8 flex items-center bg-500" id="summary_service">
-                                        <i class="fa-solid form_icon"></i>
-                                        <p></p>
-                                    </div>
-                                </div>
-                                <div class="summary_container">
-                                    <p>Horaire :</p>
-                                    <div class="h-8 flex items-center bg-500">
-                                        <i class="fa-solid fa-clock form_icon"></i>
-                                        <p id="summary_schedule"></p>
-                                    </div>
-                                </div>
-                            <div class="flex gap-8 mx-auto flex-1 items-end buttons">
-                                <button aria-label="Précédent" disabled onclick="previousSlide(event)" data-card=1 class="rounded-full bg-secondary text-primary hover:text-secondary hover:bg-500 duration-150 h-10 w-10"><i class="fa-solid fa-arrow-left form_icon text-xl"></i></button>
-                                <button aria-label="Valider" disabled type="submit" data-card=1 class="rounded-full bg-secondary text-primary hover:text-secondary hover:bg-500 duration-150 h-10 w-10"><i class="fa-solid fa-check form_icon text-xl"></i></button>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-                {% if not app.user %}
-                <div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
-                    <h2 class="text-lg font-primary">Envie d'aller plus vite ? </h2>
-                    <div class="flex flex-col gap-2 items-center">
-                        <button class="px-4 py-2 bg-400 text-primary duration-150 hover:bg-500 group"><a href="{{ path('sign_up') }}" class="group-hover:text-secondary duration-150">Inscrivez vous</a></button>
-                        <span>ou</span>
-                        <button class="px-4 py-2 bg-400 text-primary duration-150 hover:bg-500 group"><a href="{{ path('login') }}" class="group-hover:text-secondary duration-150">Connectez vous</a></button>
-                    </div>
-
-                </div>
-                {% else %}
-                <div class="mt-8 py-4 max-w-[589px] w-11/12 mx-auto lg:mx-auto lg:w-5/6 font-secondary border border-solid border-400 flex flex-col gap-8 items-center">
-                    <h2 class="text-lg font-primary">Envie d'aller plus vite ? </h2>
-                    <p class="text-center w-11/12 mx-auto">Vous pouvez créer des fiches de pré-remplissage personnalisés juste <a href="{{ url('client_profil', {'page_down' : 'modèles' }) }}" class="underline underline-offset-2">ici</a> !</p>
-                </div>
-                {% endif %}
-            </div>
-        </div>
-        <div class="-z-10 2xl:w-[70%] hidden lg:block w-[55%] reservation_container reservation_image relative">
-        </div>
+        {% block reservation %}
+        {% endblock %}
     </main>
 {% endblock %}
 {% block scripts %}
