--- a/templates/Reservation/user/reservation.user.html.twig
+++ b/templates/Reservation/user/reservation.user.html.twig
@@ -49,7 +49,7 @@
 								<label class="text-lg" for="places">Couverts :<label></legend>
 									<div class="w-20 flex items-center bg-500">
 										<i class="fa-solid fa-utensils form_icon"></i>
-										<input type="text" id="places" name="places" min="2" max="100" required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="1">
+										<input type="number" id="places" name="places" min="1" max="20" required class="pl-2 w-full bg-500 placeholder:text-secondary/50" placeholder="1">
 									</div>
 									<small class="form_error" id="error_places"></small>
 								</div>
