--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -9,8 +9,8 @@
             <div class="image absolute filter blur-sm md:blur-md h-full w-full -z-10">
             </div>
             <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent min-h-screen px-4">
-                <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[680px] ld:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
-                <div class="font-secondary pt-8 text-home-title-moving md:flex md:gap-2">
+                <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[500px] ld:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
+                <div class="font-secondary pt-8 text-home-2 md:flex md:gap-2">
                     <p class="">Un restaurant</p>
                     <ul class="flex flex-col items-center">
                         <li class="active">
@@ -27,53 +27,56 @@
             </div>
         </section>
         <section class="h-full text-secondary p-4 font-secondary overflow-x-hidden">
-            <h2 class="text-2.25xl text-center md:text-2.5xl md:mb-4">La Savoie dans votre assiette !</h2>
-            <div class="carousel font-primary flex flex-col md:mb-4">
-                <div class="carousel_pics grid gap-4 relative my-6 w-fit">
-                    {% for image in images_carousel %}
-                    <div class="carousel_image h-full w-full flex justify-center" id="carousel-2">
-                        <div class="h-carousel-image relative group overflow-hidden">
+            <h2 class="text-xl text-center md:text-2xl my-8">La Savoie dans votre assiette !</h2>
+            <div class="font-primary flex flex-col gap-8 md:mb-4">
+                <div class="carousel_pics duration-150">
+                    {% for key, image in images_carousel %}
+                        <div class="{{ key > 1 ? (key + 1 == images_carousel|length ? 'invisible opacity-0' : null) : null }}" style="order: {{ key + 1 }}" data-image="{{ key }}" data-active="{{ key == 0 ? 'true' : 'false' }}">
                             <picture>
-                                <source srcset={{ asset( image.path ~"-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset(image.path ~"-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset(image.path ~"-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset(image.path ~"-small.jpg") }} alt="{{ image.description }}">
+                                <source srcset={{ asset( image.path|split('.')[0] ~"-extraLarge."~ image.path|split('.')[1]) }} media="(min-width : 1200px)">
+                                <source srcset={{ asset(image.path|split('.')[0] ~"-large."~ image.path|split('.')[1]) }} media="(min-width : 990px)">
+                                <source srcset={{ asset(image.path|split('.')[0] ~"-medium."~ image.path|split('.')[1]) }} media="(min-width : 768px)">
+                                <img class="" src={{ asset(image.path|split('.')[0] ~"-small."~image.path|split('.')[1]) }} alt="{{ image.description }}">
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">{{ image.title }}</p></div>
                         </div>
-                    </div>
                     {% endfor %}
-                    {# <div class="carousel_image h-full w-full flex justify-center active" id="carousel-1">
-                        <div class="h-carousel-image relative group overflow-hidden">
+                        <div class="invisible opacity-0" style="order: 4" data-active="false">
                             <picture>
-                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('/images/uploads/'~"irish-coffee-small.jpg") }} alt="Plusieurs verres contenant du café" class="w-full">
+                                <img class="" src="/images/resize/barista-5055060-960-720-64197891cdd3d-extraLarge.jpg" alt="">
                             </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Irish Coffee</p></div>
+                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
+                        </div>
+                        <div class="" style="order: 5" data-active="false" data-image="4">
+                            <picture>
+                                <img class="" src="/images/resize/barista-5055060-960-720-64197891cdd3d-extraLarge.jpg" alt="">
+                            </picture>
+                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
+                        </div>
+                        <div class="duration-150" style="order: 2" data-image="5" data-active="false">
+                            <picture>
+                                <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-extraLarge.jpg" media="(min-width : 1200px)">
+                                <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-large.jpg" media="(min-width : 990px)">
+                                <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-medium.jpg" media="(min-width : 768px)">
+                                <img class="" src="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-small.jpg" alt="Coupe de glace à la myrtille.">
+                            </picture>
+                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Coupe des montagnes</p></div>
                         </div>
                     </div>
-                    <div class="carousel_image h-full w-full flex justify-center" id="carousel-3">
-                        <div class="h-carousel-image relative group overflow-hidden">
-                            <picture>
-                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('/images/uploads/'~"fondue-royale-small.jpg") }} alt="Casserole de fondue rouge">
-                            </picture>
-                            <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Fondue Royale</p></div>
-                        </div>
-                    </div> #}
+                    <div class="flex justify-center items-center gap-4" id="home_buttons">
+                        <button aria-label="gauche" class="text-lg"><i class="fa-solid fa-arrow-left"></i></button>
+                        {% for key, image in images_carousel %}
+                        <button class="{{ key == 0 ? "carousel_button active" : "carousel_button" }}" data-button="{{ key }}"></button>
+                        {% endfor %}
+                        <button aria-label="droite" class="text-lg"><i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
                 </div>
-                <div class="flex justify-center gap-4">
-                    <button class="carousel_button"></button>
-                    <button class="carousel_button active"></button>
-                    <button class="carousel_button"></button>
-                </div>
-            </div>
             <p class="text-center my-7 leading-8 md:text-1.5xl md:max-w-[810px] md:mx-auto md:mb-12" >À coeur de travailler avec les <span class="text-lg md:text-2xl">produits</span> et <span class="text-lg md:text-2xl">producteurs</span> de la région, le <span class="text-lg md:text-2xl">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg md:text-2xl">unique</span> !</p>
             <div class="bg-secondary drop-shadow-lg text-primary h-[58px] w-[170px] relative left-1/2 -translate-x-1/2 hover:bg-400 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-[1.3rem] group-hover:text-secondary duration-150 md:text-2xl ">Réserver</a></div>
         </section>
     </main> 
+{% endblock %}
+{% block scripts %}
+    {{ parent() }}
+    <script src={{ asset('js/home/'~'script.js') }}></script>
 {% endblock %}
