feat: right way

--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -47,13 +47,13 @@
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
                         </div>
-                        <div class="" style="order: 5" data-active="false" data-image="4">
+                        <div class="invisible opacity-0" style="order: 5" data-active="false" data-image="4">
                             <picture>
                                 <img class="" src="/images/resize/barista-5055060-960-720-64197891cdd3d-extraLarge.jpg" alt="">
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2"></p></div>
                         </div>
-                        <div class="duration-150" style="order: 2" data-image="5" data-active="false">
+                        <div class="" style="order: 2" data-image="5" data-active="false">
                             <picture>
                                 <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-extraLarge.jpg" media="(min-width : 1200px)">
                                 <source srcset="/images/resize/nadine-primeau-xLskrI8Dw68-unsplash-64197cd813a16-large.jpg" media="(min-width : 990px)">
